src/test/ui/obsolete-syntax-impl-for-dotdot.stderr
error: `impl Trait for .. {}` is an obsolete syntax
  --> $DIR/obsolete-syntax-impl-for-dotdot.rs:17:1
   |
17 | impl Trait2 for .. {} //~ ERROR `impl Trait for .. {}` is an obsolete syntax
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: use `auto trait Trait {}` instead

error: aborting due to previous error

